--- a/origami/src/app.html
+++ b/origami/src/app.html
@@ -5,8 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-		<script src="https://apis.google.com/js/platform.js" async defer></script>
-<meta name="google-signin-client_id" content="770617905390-pte5busfebd6fhbcavhqojep7tsn5ojr.apps.googleusercontent.com">
+		<script src="https://accounts.google.com/gsi/client" async defer></script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
