--- a/origami/src/app.html
+++ b/origami/src/app.html
@@ -6,6 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 		<script src="https://accounts.google.com/gsi/client" async defer></script>
+		<script>
+		window.handleCredentialResponse = function(googleUser) {
+			console.log(googleUser);
+			var profile = googleUser.getBasicProfile();
+			console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+			console.log('Name: ' + profile.getName());
+			console.log('Image URL: ' + profile.getImageUrl());
+			console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+			return true;
+		}
+		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
